[iOS] WebCore fails to build: platform/network/mac/ResourceHandleMac.mm:729:62: error: use of undeclared identifier '_CFURLConnectionCopyTimingData' <http://webkit.org/b/133445> <rdar://problem/17090035>

Reviewed by Alexey Proskuryakov.

* platform/network/mac/ResourceHandleMac.mm: Attempt to fix the
build by including a private header and local declaration.

Canonical link: https://commits.webkit.org/151491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169551 268f45cc-cd09-0410-ab3c-d52691b4dbfc